--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,6 +1,6 @@
-preload = /home/ssk/Wallpaper-Bank/koyi.png
+preload = /home/ssk/Wallpaper-Bank/wallhaven-zpm8mo_1920x1200.png
 
-wallpaper = ,/home/ssk/Wallpaper-Bank/koyi.png
+wallpaper = /home/ssk/Wallpaper-Bank/wallhaven-zpm8mo_1920x1200.png
 
 # disable messages on bottom
 splash = false
