--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,96 +1,126 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   // "logo": {
-  //   "source": "~/.config/fastfetch/profiles/baddie-2.png",
+  //   "source": "~/.config/fastfetch/profiles/train.png",
   //   "height": 14,
   //   "width": 25,
   //   "padding": {
-  //     "top": 1,
+  //     "top": 0,
   //     "left": 1,
-  //     "right": 1,
+  //     "right": 2,
   //     "bottom": 3
   //   }
   // },
   "display": {
-    "separator": " : ",
-    "color": {
-      "separator": "red",
-    },
-    "constants": [
-      "───────────────────────────────────────────────────────────────────────────",
-      "│\u001b[75C│\u001b[75D"
-      ]
+    "separator": " : "
   },
   "modules": [
+    // {
+    //   "type": "title",
+    //   "key": " "
+    // },
     {
-      "format": "{#1}{#keys}╭{$1}╮\u001b[76D {user-name-colored}{at-symbol-colored}{host-name-colored}   ",
-        "type": "title"
+      "type": "title",
+      "keyWidth": 10,
+      "format": "         {6}{7}{8}"
     },
     {
-      "key": "{$2}{#31} kernel   ",
-      "type": "kernel"
+      "type": "custom",
+      // "format": "┌──────────────────────────────────────────┐"
+      "format": " ─────────────────────────── "
+    },
+    {
+      "type": "os",
+      "key": " ",
+      "keyColor": "red"
+    },
+    {
+      "type": "kernel",
+      "key": " ",
+      "keyColor": "red"
+    },
+    // {
+    //   "type": "packages",
+    //   "key": "󰏗 ",
+    //   "keyColor": "green"
+    // },
+    {
+      "type": "display",
+      "key": " ",
+      "keyColor": "green"
+    },
+    {
+      "type": "wm",
+      "key": " ",
+      "keyColor": "yellow"
+    },
+    {
+      "type": "terminal",
+      "key": " ",
+      "keyColor": "yellow"
+    },
+    {
+      "type": "cpu",
+      "format": "{1}",
+      "key": " ",
+      "keyColor": "blue"
+    },
+    // {
+    //   "type": "gpu",
+    //   "format": "{2}",
+    //   "key": " ",
+    //   "keyColor": "magenta"
+    // },
+    // {
+    //   "type": "gpu",
+    //   "format": "{3}",
+    //   "key": " ",
+    //   "keyColor": "magenta"
+    // },
+    {
+      "type": "memory",
+      "key": "󰍛 ",
+      "keyColor": "cyan"
+    },
+    {
+      "type": "disk",
+      "key": "󰋊 ",
+      "keyColor": "cyan",
+      "format": "{1}/{2} ({3})"
     },
     {
       "type": "command",
-      "key": "{$2}󱦟 OS Age   ",
+      "key": "󱦟 ",
+      "keyColor": "31",
       "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
     },
     {
-      "key": "{$2}{#32}󰅐 uptime   ",
-      "type": "uptime"
+      "type": "uptime",
+      "key": "󱫐 ",
+      "keyColor": "red"
     },
     {
-      "key": "{$2}{#33}{icon} distro   ",
-      "type": "os"
-    },
-    {
-      "key": "{$2}{#34}󰇄 desktop  ",
-      "type": "de"
-    },
-    {
-      "key": "{$2}{#35} term     ",
-      "type": "terminal"
-    },
-    {
-      "key": "{$2}{#36} shell    ",
-      "type": "shell"
-    },
-    {
-      "key": "{$2}{#35}󰍛 cpu      ",
-      "type": "cpu",
-      "showPeCoreCount": true,
-      "temp": false
-    },
-    {
-      "key": "{$2}{#34}󰍛 gpu      ",
-      "type": "gpu"
-    },
-    {
-      "key": "{$2}{#33}󰉉 disk     ",
-      "type": "disk",
-      "folders": "/"
-    },
-    {
-      "key": "{$2}{#32} memory   ",
-      "type": "memory"
-    },
-    {
-      "key": "{$2}{#31}󰩟 network  ",
       "type": "localip",
-      "format": "{ipv4} ({ifname})"
+      "key": "󰩟 ",
+      "format": "{1} ({4})"
+      // "outputColor": "36;1"
     },
     {
-      "format": "{#1}{#keys}├{$1}┤",
-      "type": "custom"
+      "type": "custom",
+      // "format": "└──────────────────────────────────────────┘"
+      "format": " ─────────────────────────── "
     },
+    //"break",
+    // {
+    //   "type": "colors",
+    //   "paddingLeft": 2,
+    //   "symbol": "circle",
+    //   "height": 4
+    // },
     {
-      "key": "{$2}{#39} colors   ",
-      "type": "colors",
-      "symbol": "circle"
+      "type": "custom",
+      "format": "   \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m  \u001b[90m "
     },
-    {
-      "format": "{#1}{#keys}╰{$1}╯",
-      "type": "custom"
-    }
-      ]
+    "break"
+  ]
 }
