--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,16 +1,16 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-  // "logo": {
-  //   "source": "~/.config/fastfetch/profiles/train.png",
-  //   "height": 14,
-  //   "width": 25,
-  //   "padding": {
-  //     "top": 0,
-  //     "left": 1,
-  //     "right": 2,
-  //     "bottom": 3
-  //   }
-  // },
+  "logo": {
+    "source": "~/.config/fastfetch/profiles/baddie-2.png",
+    "height": 14,
+    "width": 25,
+    "padding": {
+      "top": 1,
+      "left": 1,
+      "right": 2,
+      "bottom": 3
+    }
+  },
   "display": {
     "separator": " : "
   },
