--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,8 @@ set -g default-terminal "screen-256color"
 
 # Plugins 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'nikolovlazar/tokyo-night-tmux'
+# set -g @plugin 'nikolovlazar/tokyo-night-tmux'
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -17,21 +18,6 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'omerxx/tmux-floax'
 
-# Theme: borders
-# set -g pane-border-lines simple
-# set -g pane-border-style fg=black,bright
-# set -g pane-active-border-style fg=yellow,bright
-#
-# # Theme: status
-# set -g status-style bg=default,fg=red,bright
-# set -g status-left ""
-# set -g status-right "#[fg=yellow,bright]#S"
-#
-# # Theme: status (windows)
-# set -g window-status-format "●"
-# set -g window-status-current-format "●"
-# set -g window-status-current-style "#{?window_zoomed_flag,fg=yellow,fg=magenta,nobold}"
-# set -g window-status-bell-style "fg=red,nobold"
 
 # Plugin settings
 set -g @resurrect-capture-pane-contents 'on'
