--- a/.config/alacritty/rice-colors.toml
+++ b/.config/alacritty/rice-colors.toml
@@ -1,33 +1,39 @@
-# Colors based on your Kitty configuration
-
 # Default colors
 [colors.primary]
-background = "#0d0f20"
-foreground = "#e4f0fb"
+background = '#1a1b26'
+foreground = '#c0caf5'
 
-# Cursor colors
-[colors.cursor]
-cursor = "#00d9ff"
-text = "#0d0f20"
+#[colors.cursor]
+#cursor = '#c0caf5'
+#text = '#1a1b26'
 
 # Normal colors
 [colors.normal]
-black = "#1b1e34"
-red = "#ff6161"
-green = "#7fff00"
-yellow = "#ffc600"
-blue = "#00d9ff"
-magenta = "#ff4dff"
-cyan = "#00ffcc"
-white = "#e4f0fb"
+black = '#15161e'
+red = '#f7768e'
+green = '#9ece6a'
+yellow = '#e0af68'
+blue = '#7aa2f7'
+magenta = '#bb9af7'
+cyan = '#7dcfff'
+white = '#a9b1d6'
 
 # Bright colors
 [colors.bright]
-black = "#4e505c"
-red = "#ff7878"
-green = "#9dff00"
-yellow = "#ffd500"
-blue = "#00ffff"
-magenta = "#ff66ff"
-cyan = "#00ffee"
-white = "#ffffff"
+black = '#414868'
+red = '#ff899d'
+green = '#9fe044'
+yellow = '#faba4a'
+blue = '#8db0ff'
+magenta = '#c7a9ff'
+cyan = '#a4daff'
+white = '#c0caf5'
+
+# Indexed Colors
+[[colors.indexed_colors]]
+index = 16
+color = '#ff9e64'
+
+[[colors.indexed_colors]]
+index = 17
+color = '#db4b4b'
