--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/.config/fastfetch/profiles/baddie-2.png",
+    "source": "~/.config/fastfetch/logos/saturn.txt",
     "height": 14,
     "width": 25,
     "padding": {
