--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,6 +1,6 @@
 # i3 config file (v4)
 
- for_window [class="^.*"] border pixel 0
+ for_window [class="^.*"] border pixel 4
 
 # set mod key (Mod1=<Alt>, Mod4=<Super>)
 set $mod Mod4
@@ -9,7 +9,7 @@ exec --no-startup-id picom --config ~/.config/picom/picom.conf
 exec --no-startup-id xrdb -merge ~/.Xresources
 #exec_always --no-startup-id setxkbmap -option :nocaps
 exec_always --no-startup-id setxkbmap -option 
-exec --no-startup-id variety
+exec --no-startup-id variety --restore
 exec_always --no-startup-id autotiling
 exec_always --no-startup-id xborders
 
@@ -22,8 +22,8 @@ exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
 font pango:JetbrainsMono Nerd Font Bold 12
 
 # Gaps
-gaps outer 10
-gaps inner 20
+gaps outer 2
+gaps inner 5
 # gaps top   -5
 
 # Start XDG autostart .desktop files using dex. See also
@@ -49,7 +49,7 @@ bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec ghostty
 
 # Send the terminal to the scratchpad
 bindsym $mod+Shift+Return move scratchpad
@@ -102,7 +102,11 @@ bindsym $mod+e layout toggle split
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+# bindsym $mod+d focus child
+
+# Switch to prev/next workspace
+bindsym $mod+slash workspace next
+bindsym $mod+period workspace prev
 
 # Audio controls using pactl
 bindsym F1 exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
@@ -207,41 +211,6 @@ bindsym $mod+c exec "~/.config/i3/lockscreen.sh"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-
-# set $rosewater #f5e0dc
-# set $flamingo  #f2cdcd
-# set $pink      #f5c2e7
-# set $mauve     #cba6f7
-# set $red       #f38ba8
-# set $maroon    #eba0ac
-# set $peach     #fab387
-# set $yellow    #f9e2af
-# set $green     #a6e3a1
-# set $teal      #94e2d5
-# set $sky       #89dceb
-# set $sapphire  #74c7ec
-# set $blue      #89b4fa
-# set $lavender  #b4befe
-# set $text      #cdd6f4
-# set $subtext1  #bac2de
-# set $subtext0  #a6adc8
-# set $overlay2  #9399b2
-# set $overlay1  #7f849c
-# set $overlay0  #6c7086
-# set $surface2  #585b70
-# set $surface1  #45475a
-# set $surface0  #313244
-# set $base      #1e1e2e
-# set $mantle    #181825
-# set $crust     #11111b
-#
-# # target                 title     bg    text      indicator    border
-# client.focused           $mantle   $mauve $mantle  $mauve     $mauve
-# client.focused_inactive  $overlay0 $base  $text    $mauve     $overlay0
-# client.unfocused         $overlay0 $base  $text    $rosewater $overlay0
-# client.urgent            $peach    $base  $peach   $overlay0  $peach
-# client.placeholder       $overlay0 $base  $text    $overlay0  $overlay0
-# client.background        $base
 
 # Color Scheme
 set $background      #990000
