--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -7,8 +7,8 @@ xrender-sync = true;
 xrender-sync-fence = true;
 
 # corners
-rounded-corners = true;
-corner-radius = 12;
+rounded-corners = false;
+corner-radius = 0;
 
 # Exclude specific windows from rounded corners (optional)
 rounded-corners-exclude = [
@@ -40,7 +40,7 @@ blur-background-exclude = [
 ];
 
 # Enable shadows
-shadow = true;
+shadow = false;
 shadow-radius = 20;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
@@ -54,6 +54,6 @@ shadow-exclude = [
 ]
 
 # Opacity
-inactive-opacity = 0.9;
-active-opacity = 1;
+# inactive-opacity = 0.9;
+# active-opacity = 1;
 
