--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -28,7 +28,7 @@ radius = 0
 dpi = 96
 background = ${colors.background}
 foreground = ${colors.foreground}
-font-0 = JetBrainsMono Nerd Font:size=14:weight=bold;2
+font-0 = JetBrainsMono Nerd Font:size=12:weight=bold;2
 padding-left = 0
 padding-right = 1
 module-margin = 1
@@ -46,14 +46,14 @@ height = 36px
 bottom = true
 background = ${colors.background}
 foreground = ${colors.foreground}
-font-0 = JetBrainsMono Nerd Font:size=14:weight=bold;2
+font-0 = JetBrainsMono Nerd Font:size=12:weight=bold;2
 padding-left = 2
 padding-right = 2
 module-margin = 1
 separator = | 
 separator-foreground = ${colors.disabled}
 
-modules-left = temperature cpu memory 
+modules-left = temperature filesystem cpu memory 
 modules-center = xwindow
 modules-right = wlan bluetooth 
 
