--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -17,7 +17,7 @@ gtk-wide-tabs = false
 # window-padding-y = 50,0
 # window-padding-x = 50,0
 window-padding-balance = false
-window-decoration = true
+window-decoration = false
 
 # Other
 mouse-hide-while-typing = true
