nvim config tweak

--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,15 +1,16 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/.config/fastfetch/logos/saturn.txt",
-    "height": 14,
-    "width": 25,
-    "padding": {
-      "top": 1,
-      "left": 1,
-      "right": 2,
-      "bottom": 3
-    }
+    "source": "endeavour_small"
+    // "source": "~/.config/fastfetch/logos/saturn.txt"
+    // "height": 14,
+    // "width": 25,
+    // "padding": {
+    //   "top": 1,
+    //   "left": 1,
+    //   "right": 2,
+    //   "bottom": 3
+    // }
   },
   "display": {
     "separator": " : "
@@ -22,12 +23,13 @@
     {
       "type": "title",
       "keyWidth": 10,
-      "format": "         {6}{7}{8}"
+      "format": "{6}{7}{8}"
     },
     {
       "type": "custom",
       // "format": "┌──────────────────────────────────────────┐"
-      "format": " ─────────────────────────── "
+      // "format": " ─────────────────────────── "
+      "format": "----------------------------"
     },
     {
       "type": "os",
@@ -105,22 +107,21 @@
       "format": "{1} ({4})"
       // "outputColor": "36;1"
     },
-    {
-      "type": "custom",
-      // "format": "└──────────────────────────────────────────┘"
-      "format": " ─────────────────────────── "
-    },
-    //"break",
     // {
-    //   "type": "colors",
-    //   "paddingLeft": 2,
-    //   "symbol": "circle",
-    //   "height": 4
+    //   "type": "custom",
+    //   // "format": "└──────────────────────────────────────────┘"
+    //   "format": " ─────────────────────────── "
     // },
+    //"break",
     {
-      "type": "custom",
-      "format": "   \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m  \u001b[90m "
+      "type": "colors",
+      "paddingLeft": 2,
+      "symbol": "circle"
     },
+    // {
+    //   "type": "custom",
+    //   "format": "\u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m  \u001b[90m "
+    // },
     "break"
   ]
 }
