--- a/.config/i3/config
+++ b/.config/i3/config
@@ -10,6 +10,7 @@ exec --no-startup-id xrdb -merge ~/.Xresources
 #exec_always --no-startup-id setxkbmap -option :nocaps
 exec_always --no-startup-id setxkbmap -option 
 exec --no-startup-id variety --restore
+exec --no-startup-id waypaper --restore
 exec_always --no-startup-id autotiling
 exec_always --no-startup-id xborders
 
