--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -67,7 +67,7 @@ tray-spacing = 16pt
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.background-alt}
+label-active-background = ${colors.primary}
 label-active-underline= ${colors.primary}
 label-active-padding = 1
 
@@ -155,7 +155,15 @@ ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
 ramp-capacity-foreground = ${colors.primary}
-low-at = 5
+low-at = 20
+format-low = <animation-low> <label-low>
+animation-low-0 = 
+animation-low-1 = 
+animation-low-2 = 
+animation-low-3 =
+animation-low-4 = 
+animation-low-framerate = 500
+animation-low-foreground = ${colors.alert}
 battery = BAT1
 adapter = ACAD
 poll-interval = 5
