--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -25,7 +25,7 @@ detect-rounded-corners = true;
 # Blur
 blur-method = "dual_kawase";
 blur-size = 12;
-blur-strength = 3;
+blur-strength = 5;
 blur-background = true;
 blur-background-frame = false;
 blur-kern = "3x3box";
@@ -54,6 +54,6 @@ shadow-exclude = [
 ]
 
 # Opacity
-# inactive-opacity = 0.9;
-# active-opacity = 1;
+inactive-opacity = 0.9;
+active-opacity = 1;
 
