--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -92,7 +92,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_free%%
+label-mounted = %{F#F0C674} %{F-} %percentage_free%%
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -123,15 +123,15 @@ label-indicator-background = ${colors.secondary}
 
 [module/memory]
 type = internal/memory
-interval = 2
+interval = 1
 format-prefix = "RAM "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
-interval = 2
-format-prefix = "CPU"
+interval = 1
+format-prefix = ""
 format-prefix-foreground = ${colors.primary}
 label = %percentage:3%%
 
