--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,6 +1,6 @@
-preload = /home/ssk/Wallpaper-Bank/wallhaven-3q9qky_1920x1200.png
+preload = /home/ssk/.config/sway/tokyonight.png
 
-wallpaper = /home/ssk/Wallpaper-Bank/wallhaven-3q9qky_1920x1200.png
+wallpaper = /home/ssk/.config/sway/tokyonight.png
 
 # disable messages on bottom
 splash = false
