--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,7 +2,7 @@
 
  for_window [class="^.*"] border pixel 3
 
-exec_always --no-startup-id feh --bg-scale ~/.config/i3/tokyonight.png
+# exec_always --no-startup-id feh --bg-scale ~/.config/i3/walls/tokyonight.png
 # set mod key (Mod1=<Alt>, Mod4=<Super>)
 set $mod Mod4
 
