--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -26,5 +26,5 @@ map ctrl+minus change_font_size all -1.0
 
 # Tokyo Night
 # include tokyonight.conf
-# include cyberdream.conf
-include mocha.conf
+include cyberdream.conf
+# include mocha.conf
