--- a/.config/i3/config
+++ b/.config/i3/config
@@ -59,7 +59,7 @@ bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec ghostty
+bindsym $mod+Return exec kitty
 
 # Send the terminal to the scratchpad
 bindsym $mod+Shift+Return move scratchpad
