--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,9 +3,10 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 15.0
+font_size 14.0
 window_padding_width 0
 background_opacity 0.75
+# background_opacity 1
 hide_window_decorations false
 confirm_os_window_close 0
 
@@ -24,7 +25,7 @@ map ctrl+minus change_font_size all -1.0
 # shell tmux
 
 
-# Tokyo Night
 # include tokyonight.conf
 include cyberdream.conf
 # include mocha.conf
+# include onedark.conf
