--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@ bold_italic_font auto
 font_size 14.0
 window_padding_width 0
 background_opacity 0.75
-# background_opacity 1
+#background_opacity 1
 hide_window_decorations false
 confirm_os_window_close 0
 
@@ -28,4 +28,4 @@ map ctrl+minus change_font_size all -1.0
 # include tokyonight.conf
 include cyberdream.conf
 # include mocha.conf
-# include onedark.conf
+# include nord.conf
