--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -57,3 +57,39 @@ shadow-exclude = [
 inactive-opacity = 0.9;
 active-opacity = 1;
 
+
+#################################
+# Animations
+#################################
+
+animations = true;
+animation-stiffness = 250.0;        # lower = bouncier, higher = stiffer
+animation-dampening = 20.0;         # smooth deceleration
+
+# Open/close animations
+animation-for-open-window = "zoom"; # zoom effect similar to Hyprland
+animation-for-unmap-window = "zoom";# shrink + fade when closing
+
+# Duration (Hyprland is around 0.25s - 0.3s)
+animation-durations = 0.28;
+
+# Curve for smooth start/end (Hyprland feel)
+animation-curve = "ease-out";
+
+# Dialogs and popups
+animation-for-transient-window = "slide-up";
+animation-for-dialog-window    = "slide-up";
+animation-for-menu-window      = "slide-down";
+animation-for-tooltip-window   = "fade";
+
+# Keep animations fluid
+animation-clamping = false;
+
+#################################
+# Fade settings
+#################################
+fading = true;
+fade-delta = 10;             # frame interval
+fade-in-step = 0.03;         # smooth fade in
+fade-out-step = 0.03;        # smooth fade out
+fade-exclude = [];           # windows to exclude from fading
