--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -10,15 +10,26 @@
 ;
 ;==========================================================
 [colors]
-background = #0d0f20    
-background-alt = #1b1e34 
-foreground = #e6ebef
-primary = #5294e2     
-secondary = #ff4dff    
-alert = #ff6161         
-disabled = #4e505c       
-transparent = #00000000   
-label = #ffc600            
+; TokyoNight color palette
+# background =     #0d0f20    
+# background-alt = #1b1e34 
+# foreground =     #e6ebef
+# primary =        #5294e2     
+# secondary =      #ff4dff    
+# alert =          #ff6161         
+# disabled =       #4e505c       
+# label =          #ffc600            
+transparent =      #00000000   
+;
+; Nord color palette
+background =       #2e3440
+background-alt =   #3b4252
+foreground     =   #d8dee9
+primary =          #81a1c1
+secondary=         #b48ead
+alert =            #bf616a
+disabled =         #d8dee9
+label=             #ebcb8b
 
 [bar/top]
 monitor = ${env:MONITOR:}
