--- a/.config/i3/config
+++ b/.config/i3/config
@@ -226,10 +226,17 @@ bindsym $mod+c exec "~/.config/i3/lockscreen.sh"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
-set $color1 #0d0f20  
-set $color2 #5294e2 
-set $color3 #4e505c
-set $color4 #ff6161
+# Tokyo Night color scheme
+# set $color1 #0d0f20  
+# set $color2 #5294e2 
+# set $color3 #4e505c
+# set $color4 #ff6161
+
+# Nord color scheme
+set $color1 #2e3440
+set $color2 #81a1c1 
+set $color3 #3b4252  
+set $color4 #bf616a
 
 client.focused               $color2 $color2 $color1 $color2 $color2
 client.unfocused             $color3 $color1 $color2 $color1 $color1
