Update configs for multi-monitor, theme, terminal, and environment
- Enable external monitor and workspace assignment in i3 and sway configs
- Switch rofi theme to sidebar_variant and update selected color
- Change sway terminal to kitty
- Set Waybar to display on eDP-1
- Update $BROWSER to brave and add vi alias in .zshrc
- Add JAVA_HOME and Java 17 to PATH in .zshrc
- Comment swaybg startup for sway

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -3,6 +3,7 @@
   "position": "top",
   "height": 30,
   "margin": 5,
+  "output": "eDP-1",
   "modules-left": [
     "sway/workspaces",
     "hyprland/workspaces",
