Switch to Nord theme across configs
- Change terminal to kitty in Hyprland config
- Update Kitty config to use Nord theme
- Set Neovim colorscheme to Nord and update tab navigation keymaps
- Apply Nord colors to Rofi and switch theme
- Add Nord colorscheme for Sway and update config to use it
- Adjust Sway blur and border variables
- Update Waybar config and style for Nord theme, tweak modules and clock format
- Comment out module colors in Waybar Nord theme
- Add session name and left alignment to tmux status bar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,7 +10,7 @@ exec-once = waypaper --restore
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme "Bibata-Modern-Ice"
 
 # Set programs that you use
-$terminal = ghostty
+$terminal = kitty
 $fileManager = nautilus
 # $menu = wofi --show drun
 $menu = rofi -show drun
