--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,6 @@ set -g default-terminal "screen-256color"
 # Plugins 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'nikolovlazar/tokyo-night-tmux'
-# set -g @plugin 'fabioluciano/tmux-tokyo-night'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -33,6 +32,8 @@ set -g @sessionx-bind 'space'
 set -g @floax-bind '-n M-t'
 
 # Setup tmux theme
+set -g status-left "#S "  # Show session name on the left
+set -g status-justify left  # Align window list to left
 set -g @tokyo-night-tmux_window_id_style fsquare
 set -g @tokyo-night-tmux_pane_id_style hsquare
 set -g @tokyo-night-tmux_zoom_id_style dsquare
