feat: switch to nordic.nvim colorscheme, update UI configs for nord theme
- Replace nord.nvim with nordic.nvim in Neovim config and lockfile
- Update colorscheme setup to use nordic.nvim
- Change Kitty, Waybar, Wlogout, and Sway configs to use nord-inspired colors and settings
- Move Waybar to bottom, tweak modules and workspace settings
- Adjust Sway output scale for eDP-1
- Update Wlogout button styles for nord palette

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -26,6 +26,6 @@ map ctrl+minus change_font_size all -1.0
 
 
 # include tokyonight.conf
-# include cyberdream.conf
+ include cyberdream.conf
 # include mocha.conf
-include nord.conf
+# include nord.conf
