theme: switch to tokyonight/nord, update UI opacity, margins, and font sizes
- Switch terminal and editor themes to tokyonight/nord (ghostty, kitty, nvim, sway, waybar)
- Increase UI transparency and blur for sway/waybar
- Adjust font sizes and margins for waybar and kitty
- Move waybar to top, reduce height, tweak module borders/colors
- Update background images for hyprlock
- Change vim colorscheme to desert
- Add zsh bindkey for 'jk' to vi-cmd-mode
- Remove nordic.nvim, add tokyonight.nvim in nvim plugins

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,7 +1,7 @@
 # Theme
-theme = coolnight
-# background-opacity = 0.75
-background-opacity = 1
+theme = nord
+background-opacity = 0.75
+# background-opacity = 1
 
 # Font
 font-family = "JetBrains Mono Nerd Font"
