feat: switch to nord theme for waybar, add catppuccin/gruvbox to nvim, update sway/i3 configs
- Waybar: change theme to nord, update style.css, restructure config.jsonc for top/bottom bars, backup previous configs and themes
- Neovim: add catppuccin and gruvbox themes, update colorscheme loader, set default to onedark, remove vague.nvim, update lazy-lock
- Sway: update catppuccin-mocha colors, adjust output scaling, disable blur, set opacity to 1
- i3: comment out monitor/gaps config
- Misc: backup waybar configs and themes for easy switching

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -34,11 +34,11 @@ gaps inner 5
  exec --no-startup-id dex --autostart --environment i3
 
 # monitor configuration
-exec --no-startup-id xrandr --output eDP-1-1 --off --output HDMI-1-1 --mode 1920x1080
-# Set gaps only on workspace 2
-assign [workspace="2"] $ws2
-gaps inner 20
-gaps outer 20
+# exec --no-startup-id xrandr --output eDP-1-1 --off --output HDMI-1-1 --mode 1920x1080
+# # Set gaps only on workspace 2
+# assign [workspace="2"] $ws2
+# gaps inner 20
+# gaps outer 20
 
 # screen before suspend. Use loginctl lock-session to lock your screen. exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
