--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,10 +3,10 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 12.0
+font_size 13.0
 window_padding_width 0
-background_opacity 0.75
-#background_opacity 1
+background_opacity 0.9
+# background_opacity 1
 hide_window_decorations false
 confirm_os_window_close 0
 
@@ -26,6 +26,6 @@ map ctrl+minus change_font_size all -1.0
 
 
 # include tokyonight.conf
- include cyberdream.conf
+# include cyberdream.conf
 # include mocha.conf
-# include nord.conf
+include nord.conf
