--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,154 +1,134 @@
-[
-  {
-    "layer": "top",
-    "position": "top",
-    "height": "30px",
-    "padding-right": "10px",
-    "modules-left": [
-      "sway/workspaces",
-      "sway/scratchpad",
-      "hyprland/workspaces"
-    ],
-    "modules-center": [
-      "clock"
-    ],
-    "modules-right": [
-      "battery",
-      "custom/separator",
-      "pulseaudio",
-      "custom/separator",
-      "backlight"
-    ],
-    "custom/separator": {
-      "format": "|"
-    },
-    "sway/workspaces": {
-      "all-outputs": true,
-      "warp-on-scroll": true,
-      "enable-bar-scroll": false,
-      "format": "{icon}",
-      "format-icons": {}
-      // "persistent-workspaces": {
-      //   "1": [],
-      //   "2": [],
-      //   "3": [],
-      //   "4": []
-      // }
-    },
-    "sway/scratchpad": {
-      "format": " {count}",
-      "show-empty": false,
-      "tooltip": true,
-      "tooltip-format": "{app}: {title}"
-    },
-    "clock": {
-      // "format": " {:%A, %B %d, %Y %I:%M %p}",
-      "format": "  {:%a, %b-%d %Y |   %I:%M %p}",
-      "tooltip": true,
-      "tooltip-format": "<tt>{calendar}</tt>"
-    },
-    "battery": {
-      "interval": 1,
-      "states": {
-        "good": 80,
-        "warning": 30,
-        "critical": 20
-      },
-      "format": " {capacity}%",
-      "format-charging": " {capacity}%",
-      "format-discharging": " {capacity}%",
-      "format-critical": "  {capacity}% (Critical!!)",
-      "format-charging-warning": " {capacity}%",
-      "format-charging-critical": " {capacity}%",
-      "format-discharging-critical": "  {capacity}% (critical!!)",
-      "tooltip-format": "{time} remaining",
-      "tooltip-format-charging": "{time} until full",
-      "tooltip-format-discharging": "{time} remaining",
-      "on-click": "swaymsg exec gnome-control-center power"
-    },
-    "pulseaudio": {
-      "format": "  {volume}%",
-      "format-muted": " M",
-      "tooltip-format": "{desc}"
-    },
-    "backlight": {
-      "device": "intel_backlight",
-      "scroll-step": 5,
-      "format": " {percent}%",
-      "tooltip": false
-    }
+{
+  "layer": "top",
+  "position": "top",
+  "height": 10,
+  "margin-left": 5,
+  "margin-right": 5,
+  // "output": "eDP-1",
+  "modules-left": [
+    // "sway/window",
+    // "network#speed"
+    "battery",
+    "temperature",
+    "disk",
+    "memory",
+    "cpu"
+  ],
+  "modules-center": [
+    "sway/workspaces",
+    "hyprland/workspaces"
+  ],
+  "modules-right": [
+    "sway/scratchpad",
+    "pulseaudio",
+    "backlight",
+    "network",
+    "bluetooth",
+    // "custom/separator",
+    "clock"
+  ],
+  "custom/separator": {
+    "format": "|"
   },
-  {
-    "layer": "top",
-    "position": "bottom",
-    "height": "30px",
-    "padding-right": "10px",
-    "modules-left": [
-      "temperature",
-      "custom/separator",
-      "disk",
-      "custom/separator",
-      "cpu",
-      "custom/separator",
-      "memory"
-    ],
-    "modules-center": [
-      "sway/window",
-      "hyprland/window"
-    ],
-    "modules-right": [
-      "network",
-      "custom/separator",
-      "bluetooth"
-    ],
-    "custom/separator": {
-      "format": "|"
+  "sway/workspaces": {
+    "all-outputs": true,
+    "warp-on-scroll": true,
+    "enable-bar-scroll": false,
+    "format": "{icon}",
+    "format-icons": {}
+    // "persistent-workspaces": {
+    //   "1": [],
+    //   "2": [],
+    //   "3": [],
+    //   "4": []
+    // }
+  },
+  "sway/scratchpad": {
+    "format": " {count}",
+    "show-empty": false,
+    "tooltip": true,
+    "tooltip-format": "{app}: {title}"
+  },
+  "sway/window": {
+    "format": "{app_id}",
+    "separate-outputs": true,
+    "icon": true
+  },
+  "disk": {
+    "interval": 60,
+    "format": " {}%",
+    // "format": "  {free}/{total}",
+    "tooltip-format": "{used}/{total}"
+  },
+  "cpu": {
+    "interval": 1,
+    "format": " {usage}%",
+    "tooltip-format": "{usage}%",
+    "on-click": "swaymsg exec gnome-system-monitor"
+  },
+  "memory": {
+    "interval": 1,
+    "format": " {}%",
+    "tooltip-format": "{used}/{total} GiB",
+    "on-click": "swaymsg exec gnome-system-monitor"
+  },
+  "temperature": {
+    "interval": 5,
+    "tooltip": false,
+    "thermal-zone": 2,
+    "critical-threshold": 70,
+    "format": " {temperatureC}°C",
+    "format-critical": " {temperatureC}°C (Critical!!)"
+  },
+  "network": {
+    "format-wifi": " ",
+    "format-ethernet": " {essid}",
+    "format-disconnected": "  Disconnected",
+    "interval": 5,
+    "tooltip-format-wifi": "{essid} |  {bandwidthDownBytes} |  {bandwidthUpBytes}",
+    "on-click": "swaymsg exec gnome-control-center network"
+  },
+  "pulseaudio": {
+    "format": "  {volume}%",
+    "format-muted": " M",
+    "tooltip-format": "{desc}"
+  },
+  "backlight": {
+    "device": "intel_backlight",
+    "scroll-step": 5,
+    "format": " {percent}%",
+    "tooltip": false
+  },
+  "battery": {
+    "interval": 1,
+    "states": {
+      "good": 80,
+      "warning": 30,
+      "critical": 20
     },
-    "temperature": {
-      "interval": 5,
-      "tooltip": false,
-      "thermal-zone": 2,
-      "critical-threshold": 70,
-      "format": " {temperatureC}°C",
-      "format-critical": " {temperatureC}°C (Critical!!)"
-    },
-    "disk": {
-      "interval": 60,
-      "format": " {}%",
-      // "format": "  {free}/{total}",
-      "tooltip-format": "{used}/{total}"
-    },
-    "cpu": {
-      "interval": 1,
-      "format": " {usage}%",
-      "tooltip-format": "{usage}%",
-      "on-click": "swaymsg exec gnome-system-monitor"
-    },
-    "memory": {
-      "interval": 1,
-      "format": " {}%",
-      "tooltip-format": "{used}/{total} GiB",
-      "on-click": "swaymsg exec gnome-system-monitor"
-    },
-    "sway/window": {
-      "format": "{app_id}",
-      "separate-outputs": true,
-      "icon": true
-    },
-    "network": {
-      "format-wifi": "  {essid}  {bandwidthDownBytes}",
-      "format-ethernet": " {essid}",
-      "format-disconnected": "  Disconnected",
-      "interval": 5,
-      "tooltip-format-wifi": "{essid} |  {bandwidthDownBytes} |  {bandwidthUpBytes}",
-      "on-click": "swaymsg exec gnome-control-center network"
-    },
-    "bluetooth": {
-      "format": "",
-      "format-disabled": "󰂲",
-      "format-connected": " {device_alias}",
-      "tooltip-format": "Device: {device_alias}",
-      "on-click": "blueberry"
-    }
+    "format": " {capacity}%",
+    "format-charging": " {capacity}%",
+    "format-discharging": " {capacity}%",
+    "format-critical": "  {capacity}% (Critical!!)",
+    "format-charging-warning": " {capacity}%",
+    "format-charging-critical": " {capacity}%",
+    "format-discharging-critical": "  {capacity}% (critical!!)",
+    "tooltip-format": "{time} remaining",
+    "tooltip-format-charging": "{time} until full",
+    "tooltip-format-discharging": "{time} remaining",
+    "on-click": "swaymsg exec gnome-control-center power"
+  },
+  "clock": {
+    // "format": " {:%A, %B %d, %Y %I:%M %p}",
+    "format": "  {:%a, %b-%d %Y |   %I:%M %p}",
+    "tooltip": true,
+    "tooltip-format": "<tt>{calendar}</tt>"
+  },
+  "bluetooth": {
+    "format": "",
+    "format-disabled": "󰂲",
+    "format-connected": "",
+    "tooltip-format": "Device: {device_alias}",
+    "on-click": "blueberry"
   }
-]
+}
