--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,7 +10,7 @@ exec-once = waypaper --restore
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme "Bibata-Modern-Ice"
 
 # Set programs that you use
-$terminal = kitty
+$terminal = ghostty
 $fileManager = nautilus
 # $menu = wofi --show drun
 $menu = rofi -show drun
@@ -115,7 +115,7 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+    # workspace_swipe = off
 }
 
 binds {
@@ -138,6 +138,7 @@ misc {
 # Example windowrule v1
 # windowrule = float, ^(ghostty)$
 # # Example windowrule v2
+windowrulev2 = float,class:*
 # windowrulev2 = float,class:^(ghostty)$,title:^(ghostty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
