--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,13 +9,20 @@ set -g default-terminal "screen-256color"
 
 # Plugins 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'nikolovlazar/tokyo-night-tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'omerxx/tmux-floax'
+
+# TokyoNight Theme
+set -g @plugin 'nikolovlazar/tokyo-night-tmux'
+# set -g status-left "#S "  
+# set -g status-justify left  
+# set -g @tokyo-night-tmux_window_id_style fsquare
+# set -g @tokyo-night-tmux_pane_id_style hsquare
+# set -g @tokyo-night-tmux_zoom_id_style dsquare
 
 
 # Plugin settings
@@ -31,12 +38,6 @@ bind-key ` send-prefix
 set -g @sessionx-bind 'space'
 set -g @floax-bind '-n M-t'
 
-# Setup tmux theme
-set -g status-left "#S "  # Show session name on the left
-set -g status-justify left  # Align window list to left
-set -g @tokyo-night-tmux_window_id_style fsquare
-set -g @tokyo-night-tmux_pane_id_style hsquare
-set -g @tokyo-night-tmux_zoom_id_style dsquare
 
 # Undercurl
 set -g default-terminal "${TERM}"
