--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,10 +1,9 @@
 # BACKGROUND
 background {
-  # monitor =
+# monitor =
 #path = screenshot
 # path = /home/ssk/Wallpaper-Bank/hiroshi_nagai.png
-    path = /home/ssk/Wallpaper-Bank/himalyas.png
-    #color = $background
+  path = /home/ssk/Wallpaper-Bank/daylight-car-landscape.png    #color = $background
     blur_passes = 2
     contrast = 1
     brightness = 0.5
